# harmonize-wq

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  CITATION.cff  Code of Conduct.rst  LICENSE  README.md  README.rst  contributing.rst  noxfile.py  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: dependabot.yml
.github/workflows/: documentation.yaml  documentation_deploy.yaml  documentation_test.yml  lint.yml  nb_refresh.yml  release.yml  test.yml  test_r.yaml
ESI/harmonize-wq/harmonize_wq/: __init__.py  basis.py  clean.py  convert.py  domains.py  harmonize.py  wrangle.py
ESI/harmonize-wq/harmonize_wq/tests/: test_harmonize_WQP.py
ESI/harmonize-wq/harmonize_wq/tests/data/: PPBays_NCCA.geojson  wqp_results3.txt
demos/: Harmonize_CapeCod.ipynb  Harmonize_CapeCod_Detailed.ipynb  Harmonize_CapeCod_Simple.ipynb  Harmonize_GOM.ipynb  Harmonize_Pensacola.Rmd  Harmonize_Pensacola.ipynb  Harmonize_Pensacola_Detailed.ipynb  Harmonize_Pensacola_MarcW.Rmd  Harmonize_Pensacola_Simple.ipynb  Harmonize_Tampa.ipynb  Harmonize_Tampa_Detailed.ipynb  Harmonize_Tampa_Simple.ipynb
docs/notebooks/: Harmonize_CapeCod_Simple.nblink  cape.nblink
docs/source/: Code of Conduct.rst  Harmonize_Tampa_Simple.ipynb  conf.py  contributing.rst  example workflow.rst  harmonize_wq.rst  ignored_wordlist.txt  index.rst  installing.rst  modules.rst  notebooks.rst  overview.rst
docs/source/notebooks/: Harmonize_CapeCod_Detailed.nblink  Harmonize_CapeCod_Simple.nblink  Harmonize_GOM.nblink  Harmonize_Pensacola_Detailed.nblink  Harmonize_Tampa_Simple.nblink
harmonize_wq/: __init__.py  basis.py  clean.py  convert.py  domains.py  harmonize.py  location.py  visualize.py  wq_data.py  wrangle.py
harmonize_wq/tests/: test_harmonize_WQP.py
harmonize_wq/tests/data/: NCCA_dissolved_GOM.dbf  NCCA_dissolved_GOM.sbn  NCCA_dissolved_GOM.sbx  NCCA_dissolved_GOM.shx  PPBays_NCCA.geojson
paper/: paper.bib  paper.md
~opt/anaconda3/envs/wq-reticulate/: pyvenv.cfg
~opt/anaconda3/envs/wq-reticulate/Scripts/: activate  activate.bat  pip-script.py
~opt/anaconda3/envs/wq-reticulate/conda-meta/: bzip2-1.0.8-h8ffe710_4.json  ca-certificates-2022.9.14-h5b45459_0.json  history  libffi-3.4.2-h8ffe710_5.json  libsqlite-3.39.3-hcfcfb64_0.json  libzlib-1.2.12-hcfcfb64_3.json  openssl-3.0.5-hcfcfb64_2.json  pip-22.2.2-pyhd8ed1ab_0.json  python-3.8.13-hcf16a7b_0_cpython.json  setuptools-65.3.0-pyhd8ed1ab_1.json  sqlite-3.39.3-hcfcfb64_0.json  tk-8.6.12-h8ffe710_0.json  ucrt-10.0.20348.0-h57928b3_0.json  vc-14.2-hb210afc_7.json  vs2015_runtime-14.29.30139-h890b9b1_7.json  wheel-0.37.1-pyhd8ed1ab_0.json  xz-5.2.6-h8d14728_0.json
~opt/anaconda3/envs/wq-reticulate/libs/: python3.lib  python38.lib
