[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["harmonize_wq"]

[metadata]
name = "harmonize_wq"
version = "0.3.1"

[project]
name = "harmonize_wq"
version = "0.3.1"
authors = [
  { name="Justin Bousquin", email="Bousquin.Justin@epa.gov" },
]
description = "Package to standardize, clean, and wrangle Water Quality Portal data into more analytic-ready formats"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["USEPA", "water data", "water quality"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
]
dependencies = [
    "geopandas",
    "pint",
    "dataretrieval",
]

[project.optional-dependencies]
test = ["pytest"]
doc = ["sphinx"]

[project.urls]
"Homepage" = "https://github.com/USEPA/harmonize-wq"
"Documentation" = "https://usepa.github.io/harmonize-wq/"
"Bug Tracker" = "https://github.com/USEPA/harmonize-wq/issues"
