[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["harmonize_wq"]

[project]
name = "harmonize_wq"
version = "0.5.0"
authors = [
  { name="Justin Bousquin", email="Bousquin.Justin@epa.gov" },
]
description = "Package to standardize, clean, and wrangle Water Quality Portal data into more analytic-ready formats"
readme = "README.md"
requires-python = ">=3.8, <3.12"
keywords = ["USEPA", "water data", "water quality"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
"Homepage" = "https://github.com/USEPA/harmonize-wq"
"Documentation" = "https://usepa.github.io/harmonize-wq/"
"Bug Tracker" = "https://github.com/USEPA/harmonize-wq/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I"
]

[tool.ruff.lint.isort]
known-first-party = ["harmonize_wq"]
